--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ h1{
       <button class="btn no" id="noBtn" type="button">No</button>
     </div>
 
-    <div class="result" id="result">❤️ 우리 결혼 확정 ❤️</div>
+    <div class="result" id="result">❤️ 넌 선택권이 없어. 우리 결혼해야돼 ❤️</div>
   </div>
 
 <script>
